--- a/jsApps/launcher/src/assets/index.scss
+++ b/jsApps/launcher/src/assets/index.scss
@@ -11,5 +11,15 @@ body {
     }
 }
 
+.container {
+    position: fixed;
+    padding: 0;
+    margin: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 @import "./navbar/index.scss";
 @import "./login/index.scss";
