--- a/jsApps/launcher/src/assets/index.scss
+++ b/jsApps/launcher/src/assets/index.scss
@@ -4,22 +4,23 @@
     padding: 0;
 }
 
-body {
-    min-height: 100vh;
-    #root {
-        min-height: 100vh;
-    }
-}
-
 .container {
     position: fixed;
+    display: flex;
+    align-items: flex-start;
     padding: 0;
     margin: 0;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+
+    .content {
+        width: 100%;
+        min-height: 100%;
+    }
 }
 
 @import "./navbar/index.scss";
 @import "./login/index.scss";
+@import "./workersList/index.scss";
