--- a/jsApps/launcher/src/assets/index.scss
+++ b/jsApps/launcher/src/assets/index.scss
@@ -1,26 +1,6 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-.container {
-    position: fixed;
-    display: flex;
-    align-items: flex-start;
-    padding: 0;
-    margin: 0;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-    .content {
-        width: 100%;
-        min-height: 100%;
-    }
-}
-
+@import "./mixins.scss";
+@import "./base.scss";
 @import "./navbar/index.scss";
 @import "./login/index.scss";
 @import "./workersList/index.scss";
+@import "./addWorker/index.scss";
