--- a/jsApps/launcher/src/assets/workersList/index.scss
+++ b/jsApps/launcher/src/assets/workersList/index.scss
@@ -1,6 +1,1 @@
-.workersList {
-    height: 100vh;
-    @media screen and( max-width: 768px) {
-        margin-top: 35px;
-    }
-}
+@import "list.scss";
