--- a/jsApps/launcher/src/assets/navbar/navbar.scss
+++ b/jsApps/launcher/src/assets/navbar/navbar.scss
@@ -1,15 +1,30 @@
+.navbar-toggle {
+    position: fixed !important;
+}
 .navbar {
     width: 20%;
     height: 100%;
     background-color: #333742;
 
-    @media screen and( max-width: 768px) {
-        width: 100%;
-    }
+    &-list {
+        background-color: #333742;
+        @include mobile {
+            width: 100%;
+            height: 100%;
+        }
 
+        .navbar-item {
+            background-color: #3f424b;
+            border-radius: 5px;
+            color: whitesmoke;
+        }
+    }
     .navbar-item {
-        background-color: #3f424b;
-        border-radius: 5px;
-        color: whitesmoke;
+        margin-top: 5px;
+        border-top: black 1px solid;
+        border-bottom: black 1px solid;
+        p {
+            margin-left: 5px;
+        }
     }
 }
