Add page with update user
Add page where user can update own data and other user

--- a/jsApps/launcher/src/assets/addWorker/index.scss
+++ b/jsApps/launcher/src/assets/addWorker/index.scss
@@ -1,10 +1,10 @@
 .add-worker {
+    @include card-layout;
     text-align: center;
     display: block;
     background-color: #fff;
     width: 80%;
     border: 1px solid black;
-    border-radius: 20px;
     margin: 100px auto;
 
     .add-worker-grid {
@@ -14,12 +14,8 @@
     }
 
     &-fields {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
+        @include flex-form-fields;
         margin-top: 10px;
-        gap: 20px;
         margin: 20px 0;
     }
     .add-worker-submit {
