--- a/jsApps/launcher/src/assets/index.scss
+++ b/jsApps/launcher/src/assets/index.scss
@@ -4,3 +4,4 @@
 @import "./login/index.scss";
 @import "./workersList/index.scss";
 @import "./addWorker/index.scss";
+@import "./account/index.scss";
