--- a/jsApps/launcher/src/assets/mixins.scss
+++ b/jsApps/launcher/src/assets/mixins.scss
@@ -3,3 +3,19 @@
         @content;
     }
 }
+
+@mixin card-layout {
+    border-radius: 10px;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+@mixin flex-form-fields {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+    margin-left: 10px;
+    @include mobile {
+        margin: 0;
+        justify-content: center;
+    }
+}
