--- a/jsApps/launcher/src/assets/account/change-user-data.scss
+++ b/jsApps/launcher/src/assets/account/change-user-data.scss
@@ -1,6 +1,6 @@
 .change-user-data {
     @include card-layout;
-    @include account-card;
+    @include form-layout;
 
     &-fields {
         @include flex-form-fields;
