--- a/jsApps/launcher/src/assets/index.scss
+++ b/jsApps/launcher/src/assets/index.scss
@@ -5,3 +5,4 @@
 @import "./workersList/index.scss";
 @import "./addWorker/index.scss";
 @import "./account/index.scss";
+@import "./location/index.scss";
