--- a/jsApps/launcher/src/assets/mixins.scss
+++ b/jsApps/launcher/src/assets/mixins.scss
@@ -9,6 +9,22 @@
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
+@mixin form-layout {
+    width: 50%;
+    margin: 20px auto 0 auto;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    overflow: hidden;
+
+    @include mobile {
+        width: 100%;
+    }
+}
+
 @mixin flex-form-fields {
     display: flex;
     flex-wrap: wrap;
