--- a/jsApps/launcher/src/assets/addWorker/index.scss
+++ b/jsApps/launcher/src/assets/addWorker/index.scss
@@ -15,6 +15,7 @@
 
     &-fields {
         @include flex-form-fields;
+        justify-content: space-around;
         margin-top: 10px;
         margin: 20px 0;
     }
