--- a/jsApps/launcher/src/assets/index.scss
+++ b/jsApps/launcher/src/assets/index.scss
@@ -6,3 +6,4 @@
 @import "./addWorker/index.scss";
 @import "./account/index.scss";
 @import "./location/index.scss";
+@import "./delivery/index.scss";
