Add admin panel for company management

--- a/jsApps/launcher/src/assets/index.scss
+++ b/jsApps/launcher/src/assets/index.scss
@@ -2,8 +2,8 @@
 @import "./base.scss";
 @import "./navbar/index.scss";
 @import "./login/index.scss";
-@import "./workersList/index.scss";
-@import "./addWorker/index.scss";
+@import "./worker/insex.scss";
 @import "./account/index.scss";
 @import "./location/index.scss";
 @import "./delivery/index.scss";
+@import "./adminPanel/index.scss";
