Add form to  password recovery
Add form to recovery and connect fronted with backed

--- a/jsApps/launcher/src/assets/index.scss
+++ b/jsApps/launcher/src/assets/index.scss
@@ -7,3 +7,4 @@
 @import "./location/index.scss";
 @import "./delivery/index.scss";
 @import "./adminPanel/index.scss";
+@import "./passwordRecovery/index.scss";
