Add layout where user can add car  and lyout with cars list

--- a/jsApps/launcher/src/assets/index.scss
+++ b/jsApps/launcher/src/assets/index.scss
@@ -8,3 +8,4 @@
 @import "./delivery/index.scss";
 @import "./adminPanel/index.scss";
 @import "./passwordRecovery/index.scss";
+@import "./car/index.scss";
