Add car menagment on frontend

--- a/jsApps/launcher/src/assets/delivery/index.scss
+++ b/jsApps/launcher/src/assets/delivery/index.scss
@@ -1,4 +1,6 @@
+@import "./update-deliver-container.scss";
 @import "./create-delivery.scss";
 @import "./delivery-list.scss";
 @import "./change-delivery-status.scss";
 @import "./update-delivery.scss";
+@import "./assign-car-to-delivery.scss";
