--- a/jsApps/launcher/src/assets/adminPanel/index.scss
+++ b/jsApps/launcher/src/assets/adminPanel/index.scss
@@ -1,1 +1,7 @@
-@import "./create-company.scss";
+.admin-panel{
+    @include mobile{
+        margin-top: 25px;
+    }    
+
+    @import "./create-company.scss";
+}
