--- a/jsApps/launcher/src/assets/base.scss
+++ b/jsApps/launcher/src/assets/base.scss
@@ -16,6 +16,10 @@
     width: 100%;
     height: 100%;
 
+    @include mobile{
+        overflow-y: scroll;
+    }
+
     .content {
         width: 100%;
         min-height: 100%;
